--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body
 
 h1
 {  
-    background-image: linear-gradient(100deg, yellow, white );
+    background-image: linear-gradient(100deg, orange, yellow );
     background-color: aqua;
     color: black;
     font-size: 30pt;
