--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body
 {
-    background-image: linear-gradient(90deg, yellow, white );
+    background-image: linear-gradient(90deg, blue, cyan );
     color: black;
     font-size: 12pt;
     font-family:Arial, Helvetica, sans-serif;
@@ -12,7 +12,7 @@ body
 
 h1
 {  
-    background-image: linear-gradient(100deg, orange, yellow );
+    background-image: linear-gradient(270deg, gray, white );
     background-color: aqua;
     color: black;
     font-size: 30pt;
